Production build the front-end application

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "jobify",
+  "name": "jobby",
   "version": "1.0.0",
   "description": "#### Track Your Job Search",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build-client": "cd client && npm run build",
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others-on-fail \" npm run server \" \" npm run client\""
